--- a/CourceExamples/layoutexample/src/main/res/layout/activity_main.xml
+++ b/CourceExamples/layoutexample/src/main/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
         android:id="@+id/buttonAdd"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/addButtonTitle"
         android:drawableLeft="@drawable/ic_android_black_24dp"
+        android:text="@string/addButtonTitle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editNumber2" />
@@ -40,9 +40,18 @@
         android:id="@+id/textResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
+        tools:text="@string/addButtonTitle" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/operationList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="@string/addButtonTitle" />
+        app:layout_constraintTop_toBottomOf="@id/textResult" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
